feat: add linear regression and decision tree and plot services

--- a/regressor/linear_regression_notebook.ipynb
+++ b/regressor/linear_regression_notebook.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 50,
       "metadata": {
         "id": "4dKWMmQpJRxA"
       },
@@ -13,7 +13,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 51,
       "metadata": {
         "id": "PCoiQKWqQUPI"
       },
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 52,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -117,7 +117,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 53,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -329,7 +329,7 @@
               "[5 rows x 64 columns]"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 53,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -340,7 +340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 54,
       "metadata": {
         "id": "aVznI_NURMts"
       },
@@ -352,7 +352,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 55,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -745,7 +745,7 @@
               "[7606 rows x 60 columns]"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 55,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -756,7 +756,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 56,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -782,7 +782,7 @@
               "Name: cash_cost, Length: 7606, dtype: int64"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 56,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -793,7 +793,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 57,
       "metadata": {
         "id": "irEaTQiIQvBt"
       },
@@ -801,12 +801,12 @@
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "X_train, X_test, y_train, y_test = train_test_split(x,y , random_state=4,test_size=0.2, shuffle=True)"
+        "X_train, X_test, y_train, y_test = train_test_split(x,y , test_size=0.2, shuffle=True)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 58,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -819,15 +819,15 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "13138248.148339355\n"
+            "13015261.364188667\n"
           ]
         }
       ],
       "source": [
-        "from sklearn.ensemble import RandomForestRegressor\n",
+        "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.metrics import mean_absolute_error\n",
         "\n",
-        "regressor = RandomForestRegressor(criterion='absolute_error',n_estimators = 200, max_depth=10)\n",
+        "regressor = LinearRegression() \n",
         "regressor.fit(X_train,y_train)\n",
         "\n",
         "y_pred = regressor.predict(X_test)\n",
@@ -836,7 +836,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 59,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -848,10 +848,10 @@
         {
           "data": {
             "text/plain": [
-              "160000000"
+              "230000000"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 59,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -862,7 +862,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 60,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -874,70 +874,70 @@
         {
           "data": {
             "text/plain": [
-              "year                           1392\n",
-              "abi                               0\n",
-              "albaluyi                          0\n",
-              "atlasi                            0\n",
-              "bademjani                         0\n",
-              "boronz                            0\n",
-              "bezh                              0\n",
-              "banafsh                           0\n",
-              "poostpiyazi                       0\n",
-              "titanium                          0\n",
-              "khakestari                        0\n",
-              "khaki                             0\n",
-              "dolfini                           0\n",
-              "zoghali                           0\n",
-              "zard                              0\n",
-              "zereshki                          0\n",
-              "zeytooni                          0\n",
-              "sabz                              0\n",
-              "sorbi                             0\n",
-              "sormeyi                           0\n",
-              "sefid                             1\n",
-              "sefidsadafi                       0\n",
-              "talayi                            0\n",
-              "toosi                             0\n",
-              "adasi                             0\n",
-              "annabi                            0\n",
-              "ghermez                           0\n",
-              "ghahveyi                          0\n",
-              "carbonblack                       0\n",
-              "kerem                             0\n",
-              "gilasi                            0\n",
-              "mesi                              0\n",
-              "meshki                            0\n",
-              "moka                              0\n",
-              "narenji                           0\n",
-              "nograbi                           0\n",
-              "noghreyi                          0\n",
-              "nookmedadi                        0\n",
-              "yashmi                            0\n",
-              "usage_km                     168000\n",
-              "badanesalem                       0\n",
-              "khatkhashjozi                     1\n",
-              "safkaribirang                     0\n",
-              "rangshodegi                       0\n",
-              "dorrang                           0\n",
-              "tamamrang                         0\n",
-              "tasadofi                          0\n",
-              "oraghi                            0\n",
-              "motorsalem                        1\n",
-              "niyazbetaamir                     0\n",
-              "taavizshode                       0\n",
-              "rearchasissalem                   1\n",
-              "rearzarbekhorde                   0\n",
-              "rearchasisrangshode               0\n",
-              "frontchasissalem                  1\n",
-              "frontzarbekhorde                  0\n",
-              "frontchasisrangshode              0\n",
-              "third_party_insurance_due         8\n",
-              "dandeyi                           1\n",
-              "automatic                         0\n",
-              "Name: 3706, dtype: int64"
+              "year                          1398\n",
+              "abi                              0\n",
+              "albaluyi                         0\n",
+              "atlasi                           0\n",
+              "bademjani                        0\n",
+              "boronz                           0\n",
+              "bezh                             0\n",
+              "banafsh                          0\n",
+              "poostpiyazi                      0\n",
+              "titanium                         0\n",
+              "khakestari                       0\n",
+              "khaki                            0\n",
+              "dolfini                          0\n",
+              "zoghali                          0\n",
+              "zard                             0\n",
+              "zereshki                         0\n",
+              "zeytooni                         0\n",
+              "sabz                             0\n",
+              "sorbi                            0\n",
+              "sormeyi                          0\n",
+              "sefid                            1\n",
+              "sefidsadafi                      0\n",
+              "talayi                           0\n",
+              "toosi                            0\n",
+              "adasi                            0\n",
+              "annabi                           0\n",
+              "ghermez                          0\n",
+              "ghahveyi                         0\n",
+              "carbonblack                      0\n",
+              "kerem                            0\n",
+              "gilasi                           0\n",
+              "mesi                             0\n",
+              "meshki                           0\n",
+              "moka                             0\n",
+              "narenji                          0\n",
+              "nograbi                          0\n",
+              "noghreyi                         0\n",
+              "nookmedadi                       0\n",
+              "yashmi                           0\n",
+              "usage_km                     60000\n",
+              "badanesalem                      1\n",
+              "khatkhashjozi                    0\n",
+              "safkaribirang                    0\n",
+              "rangshodegi                      0\n",
+              "dorrang                          0\n",
+              "tamamrang                        0\n",
+              "tasadofi                         0\n",
+              "oraghi                           0\n",
+              "motorsalem                       1\n",
+              "niyazbetaamir                    0\n",
+              "taavizshode                      0\n",
+              "rearchasissalem                  1\n",
+              "rearzarbekhorde                  0\n",
+              "rearchasisrangshode              0\n",
+              "frontchasissalem                 1\n",
+              "frontzarbekhorde                 0\n",
+              "frontchasisrangshode             0\n",
+              "third_party_insurance_due       12\n",
+              "dandeyi                          1\n",
+              "automatic                        0\n",
+              "Name: 6488, dtype: int64"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 60,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -948,7 +948,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 61,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -961,57 +961,20 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[1.6708625e+08]\n"
+            "[2.22401021e+08]\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/home/mehdi/.local/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but RandomForestRegressor was fitted with feature names\n",
+            "/home/mehdi/.local/lib/python3.9/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
             "  warnings.warn(\n"
           ]
         }
       ],
       "source": [
         "print(regressor.predict([X_test.iloc[28]]))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 21,
-      "metadata": {
-        "id": "5sVxS1RJg5Lz"
-      },
-      "outputs": [],
-      "source": [
-        "from joblib import dump, load"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 22,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "d8xcJEhPfaIO",
-        "outputId": "d3de6811-86c3-42f8-8c35-1fa435ec6909"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "['./model.joblib']"
-            ]
-          },
-          "execution_count": 22,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "dump(regressor, './model.joblib') "
       ]
     }
   ],
